misc: remove dependency on javax jaxb-api (#714)